# ajina

./: .gitignore  CLAUDE.md  README.md  TESTING.md  generate_and_deploy.sh  pyproject.toml
.github/workflows/: deploy.yml
data/: index.json  week-2026-W13.json
data/2026-W13/: bird.prompt.txt  cat.prompt.txt
input/: example.txt  week-2026-W13.txt  week-2026-W14.txt  week-2026-W15.txt  week-2026-W16.txt  week-2026-W17.txt  week-2026-W18.txt  week-2026-W19.txt
plans/: BUILD-WORKFLOW.md  IMAGE-PROMPTS.md  PROJECT.md  PROMPT-01-setup.md  PROMPT-02-frontend.md  PROMPT-03-build-pipeline.md  PROMPT-04-image-generation.md  PROMPT-05-polish-deploy.md  WEEKLY-WORKFLOW.md
site/: app.js  style.css
site/data/: index.json  week-2026-W12.json  week-2026-W13.json  week-2026-W14.json  week-2026-W15.json  week-2026-W16.json  week-2026-W17.json  week-2026-W18.json  week-2026-W19.json
site/data/2026-W13/: bird.prompt.txt  cat.prompt.txt  dog.prompt.txt  fish.prompt.txt  horse.prompt.txt  review.html
site/data/2026-W14/: afternoon-ckbirp.prompt.txt  afternoon-mduliy.prompt.txt  afternoon.prompt.txt  bracelet-auhooi.prompt.txt  bracelet-zymdtp.prompt.txt  bracelet.prompt.txt  coffee-cufrdo.prompt.txt  coffee-xvpzjf.prompt.txt  coffee.prompt.txt  ear-fiigvz.prompt.txt  ear-imjils.prompt.txt  ear.prompt.txt  earrings-dtxtlh.prompt.txt  earrings-ethprv.prompt.txt  earrings.prompt.txt  evening-mlexgc.prompt.txt  evening-vmevyd.prompt.txt  evening.prompt.txt  forty-qwsflm.prompt.txt  forty-xmgmiw.prompt.txt  (+52 more)
templates/: app.js  index.html  style.css
tests/: test_placeholder.py
(+73 files in other folders)
